# docflow-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/docflow/: ai.py  cli.py  config.py  models.py  ocr.py  pipeline.py  store.py
src/docflow/connectors/: mock.py
tests/: test_config_validation.py  test_pipeline_happy_path.py
tests/golden/: expected_output.json  sample_input.txt
