[project]
name = "docflow-cli"
version = "0.1.0"
description = "Portfolio-grade Python CLI for OCR + AI extraction + CRM/DMS routing with reliability patterns"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "rich>=13.7",
  "tenacity>=8.2",
  "requests>=2.32",
  "tomllib; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "deepdiff>=7.0",
  "jsonschema>=4.22",
]

[project.scripts]
docflow = "docflow.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"